lo que avancé hoy 23 de junio del 2022

--- a/Semana1/index.html
+++ b/Semana1/index.html
@@ -7,6 +7,9 @@
     </head>
 
     <body>
+        <!--En Index.html vamos a crear 2 links para que nos lleve a la página mundial.html e hipervinculos.html-->
+        <a href="./mundial.html" target="_blank">Mundial</a>
+        <a href="./hipervinculos.html" target="_blank">Hipervinculos</a>
         <!--Vamos insertar una imagen. Para esto se usa etiqueta img-->
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png" alt="LOGO DE HTML" width="10%">
         <h1>Introducción a HTML</h1>
