--- a/Semana1/mundial.html
+++ b/Semana1/mundial.html
@@ -10,28 +10,28 @@
         <h3>Grupo A</h3>
         <!--Agregando lista de paises en el grupo A-->
         <ul>
-            <li><img src="https://flagicons.lipis.dev/flags/4x3/ru.svg" width="20px"> Rusia</li>
-            <li><img src="https://flagicons.lipis.dev/flags/4x3/sa.svg" width="20px"> Arabia Saudita</li>
-            <li><img src="https://flagicons.lipis.dev/flags/4x3/eg.svg" width="20px"> Egipto</li>
-            <li><img src="https://flagicons.lipis.dev/flags/4x3/uy.svg" width="20px"> Uruguay</li>
+            <li><a href="https://www.fifa.com/es/about-fifa/associations/RUS" target="_blank"><img src="https://flagicons.lipis.dev/flags/4x3/ru.svg" width="20px"> Rusia</a></li>
+            <li><a href="https://www.fifa.com/es/about-fifa/associations/KSA" target="_blank"><img src="https://flagicons.lipis.dev/flags/4x3/sa.svg" width="20px"> Arabia Saudita</a></li>
+            <li><a href="https://www.fifa.com/es/about-fifa/associations/EGY" target="_blank"><img src="https://flagicons.lipis.dev/flags/4x3/eg.svg" width="20px"> Egipto</a></li>
+            <li><a href="https://www.auf.org.uy/" target="_blank"><img src="https://flagicons.lipis.dev/flags/4x3/uy.svg" width="20px"> Uruguay</a></li>
         </ul>
         <br>
         <h3>Grupo B</h3>
         <!--Agregando lista de paises en el grupo B-->
         <ul>
-            <li><img src="https://flagicons.lipis.dev/flags/4x3/pt.svg" width="20px"> Portugal</li>
-            <li><img src="https://flagicons.lipis.dev/flags/4x3/es.svg" width="20px"> España</li>
-            <li><img src="https://flagicons.lipis.dev/flags/4x3/ma.svg" width="20px"> Marruecos</li>
-            <li><img src="https://flagicons.lipis.dev/flags/4x3/ir.svg" width="20px"> Iran</li>
+            <li><a href="https://www.fpf.pt/pt/" target="_blank"><img src="https://flagicons.lipis.dev/flags/4x3/pt.svg" width="20px"> Portugal</a></li>
+            <li><a href="https://www.rfef.es/" target="_blank"><img src="https://flagicons.lipis.dev/flags/4x3/es.svg" width="20px"> España</a></li>
+            <li><a href="https://www.fifa.com/es/about-fifa/associations/MAR" target="_blank"><img src="https://flagicons.lipis.dev/flags/4x3/ma.svg" width="20px"> Marruecos</a></li>
+            <li><a href="https://www.fifa.com/es/about-fifa/associations/IRN" target="_blank"><img src="https://flagicons.lipis.dev/flags/4x3/ir.svg" width="20px"> Iran</a></li>
         </ul>
         <br>
         <h3>Grupo C</h3>
         <!--Agregando lista de paises en el grupo C-->
         <ul>
-            <li><img src="https://flagicons.lipis.dev/flags/4x3/fr.svg" width="20px"> Francia</li>
-            <li><img src="https://flagicons.lipis.dev/flags/4x3/dk.svg" width="20px"> Dinamarka</li>
-            <li><img src="https://flagicons.lipis.dev/flags/4x3/pe.svg" width="20px"> Perú</li>
-            <li><img src="https://flagicons.lipis.dev/flags/4x3/au.svg" width="20px"> Australia</li>
+            <li><a href="https://www.fff.fr/" target="_blank"><img src="https://flagicons.lipis.dev/flags/4x3/fr.svg" width="20px"> Francia</a></li>
+            <li><a href="https://www.dbu.dk/" target="_blank"><img src="https://flagicons.lipis.dev/flags/4x3/dk.svg" width="20px"> Dinamarka</a></li>
+            <li><a href="https://fpf.org.pe/" target="_blank"><img src="https://flagicons.lipis.dev/flags/4x3/pe.svg" width="20px"> Perú</a></li>
+            <li><a href="https://www.footballaustralia.com.au/" target="_blank"><img src="https://flagicons.lipis.dev/flags/4x3/au.svg" width="20px"> Australia</a></li>
         </ul>
         <br>
         <h3>Grupo D</h3>
@@ -69,7 +69,7 @@
             <li><img src="https://flagicons.lipis.dev/flags/4x3/gb-eng.svg" width="20px"> Inglaterra</li>
         </ul>
         <h3>Grupo H</h3>
-        <!--Agregando lista de paises en el grupo G-->
+        <!--Agregando lista de paises en el grupo H-->
         <ul>
             <li><img src="https://flagicons.lipis.dev/flags/4x3/pl.svg" width="20px"> Polonia</li>
             <li><img src="https://flagicons.lipis.dev/flags/4x3/sn.svg" width="20px"> Senegal</li>
